# Calibri

./: .gitignore  LICENSE  QWEN_INTEGRATION.md  README.md  pyproject.toml  requirements.txt
configs/: 1gpu.yaml  2gpu.yaml  base.py  gatescale.py  recalibration.py  scaleguidance.py
data/: t2i_compbench_train.txt  t2i_compbench_val.txt  t2i_compbench_val_random_crop.txt  test_log.txt
examples/: __init__.py
scripts/: eval_metrics.py  eval_timesteps.py  generate_val_data.py  train.py  try.py
src/: rewards.py
src/data/: prompts.py
src/metrics/: hpsv3_server.py  imagereward_scorer.py  qalign_server.py  rewards.py  unified_reward_qwen_scorer.py
src/models/: __init__.py  base_sg.py  flux_autoguidance.py  flux_gs.py  flux_sg.py  flux_sg_block.py  flux_sg_mlp_attn.py  qwen_sg.py  sd3_lora_sg.py  sd3_sg.py
src/optim/: cmaes.py  cmaes_old.py
src/utils/: config_loader.py  logging_tb.py  swanlab_logging.py  utils.py
